# customer-journey-analysis-toolbox

./: README.md  jatoolbox.py  journey_analylis_toolbox_v0.py  setup.cfg  tool box base.py
src/jatoolbox/: jatoolbox.py
