[metadata]
name = JATOOLBOX
version = 0.0.2
author = Gabriel Ribeiro,Jaime Silva 
author_email = gabriel.ribeiro@dp6.com.br, jaime.silva@dp6.com.br
description = Classe que agrega alguns métodos comummente utilizados em análises de jornadas em Python na DP6.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DP6/customer-journey-analysis-toolbox
project_urls =
    Bug Tracker = https://github.com/DP6/customer-journey-analysis-toolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src